deleted commented out styling

--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,13 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
-  /* height: 200vh; */
 }
 @media (max-width: 700px) {
   body {
     background-size: 100vmin, auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
 }
 
@@ -63,11 +65,6 @@ h1 {
 
 h3 {
   font-size: 150%;
-  /* font-size: calc(1px + 2vmin); */
-  /* font-size: 1.25vw; */
-  /* padding: 0;
-  margin: 3px; */
-  /* display: flex; */
 }
 
 ul {
@@ -101,10 +98,6 @@ ul li:first-child {
   width: 100vw;
   display: flex;
   justify-content: center;
-}
-
-.projects {
-  /* margin-top: 80vh; */
 }
 
 .projectContainer {
@@ -227,6 +220,7 @@ ul li:first-child {
 }
 
 .credit {
+  text-align: center;
   align-self: baseline;
   margin-left: 20px;
   position: fixed;
