updated resume and centered text for home

--- a/src/App.css
+++ b/src/App.css
@@ -216,7 +216,7 @@ ul li:first-child {
 
 .homeRow {
   margin: 20px;
-  text-indent: 10%;
+  text-align: center;
 }
 
 .credit {
@@ -280,3 +280,18 @@ ul li:first-child {
   width: 25vw;
   height: auto;
 }
+
+/* fade in for all sections */
+#test {
+  opacity: 0;
+
+  /* -webkit-transition: opacity 2s ease-in;
+  -moz-transition: opacity 2s ease-in;
+  -ms-transition: opacity 2s ease-in;
+  -o-transition: opacity 2s ease-in;
+  transition: opacity 2s ease-in; */
+}
+/*
+#test div.load {
+  opacity: 1;
+} */
