mobile friendly hamburger menu nav

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,49 @@ nav {
   font-size: 1.5vmin;
 }
 
+ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  justify-content: space-evenly;
+}
+#mobileNav {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  ul#mobileNav {
+    display: flex;
+    font-size: 2vmin;
+  }
+  ul#fullNav {
+    display: none;
+  }
+}
+
+ul li:first-child {
+  margin-right: 33vmin;
+  font-size: large;
+}
+
+@media (max-width: 700px) {
+  ul li:first-child {
+    margin-right: 20vmin;
+    font-size: 2.6vmin;
+  }
+}
+
+.dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  background-color: black;
+  font-size: 2.6vmin;
+  height: 25vh;
+  padding: 25px;
+  justify-content: space-between;
+}
+
 /* unvisited link */
 a:link {
   color: inherit;
@@ -65,32 +108,6 @@ h1 {
 
 h3 {
   font-size: 150%;
-}
-
-ul {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  width: 100vw;
-  justify-content: space-evenly;
-}
-
-@media (max-width: 700px) {
-  ul {
-    font-size: 2vmin;
-  }
-}
-
-ul li:first-child {
-  margin-right: 33vmin;
-  font-size: large;
-}
-
-@media (max-width: 700px) {
-  ul li:first-child {
-    margin-right: 20vmin;
-    font-size: 2.6vmin;
-  }
 }
 
 .main {
