--- a/src/App.css
+++ b/src/App.css
@@ -64,14 +64,18 @@ ul li:first-child {
   }
 }
 
-.dropdown-menu {
+.mobileDrop {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 33%;
   background-color: black;
-  font-size: 2.6vmin;
-  height: 25vh;
-  padding: 25px;
-  justify-content: space-between;
+  color: white;
+  text-align: center;
+  top: 10vh;
+  position: fixed;
+  justify-content: space-evenly;
+  font-size: 3vmin;
 }
 
 /* unvisited link */
